--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
 <body>
     <main>
         <section id="telefone">
-
+            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <a href="linkedin.html"></a>
         </section>
+
         <section id="redes-sociais">
-            <a href=""></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a>
+            <br>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a>
+            <br>
+            <a href="linkedin.html" target="tela"><img src="imagens/logo-linkedin.png" alt="Linkedin"></a>
+            <br>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
+            <br>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="YouTube"></a>
+
         </section>
     </main>
 </body>
